feat: implement web view for kds