@@ -1,8 +1,11 @@
 import org.jetbrains.compose.ExperimentalComposeLibrary
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 plugins {
     alias(libs.plugins.multiplatform)
+    alias(libs.plugins.composeCompiler)
     alias(libs.plugins.compose)
     alias(libs.plugins.kotlinx.serialization)
 }
@@ -10,7 +13,17 @@ plugins {
 val packageName = "app.dayacore.kds"
 
 kotlin {
-    jvm()
+    jvm {
+        @OptIn(ExperimentalKotlinGradlePluginApi::class)
+        compilerOptions {
+            jvmTarget.set(JvmTarget.JVM_17)
+        }
+        testRuns.named("test") {
+            executionTask.configure {
+                useJUnitPlatform()
+            }
+        }
+    }
 
     sourceSets {
         all {
@@ -24,12 +37,17 @@ kotlin {
             implementation(compose.material3)
             implementation(compose.components.resources)
             implementation(compose.components.uiToolingPreview)
-            implementation(libs.voyager.navigator)
-            implementation(libs.composeImageLoader)
+            implementation(libs.eventBus)
+            implementation(libs.koin.core)
             implementation(libs.kotlinx.coroutines.core)
             implementation(libs.kotlinx.serialization.json)
-            implementation(libs.kotlinx.datetime)
-            implementation(libs.koin.core)
+
+            implementation(libs.voyager.navigator)
+            implementation(libs.voyager.screenmodel)
+            implementation(libs.multiplatformSettings)
+            // use api since the desktop app need to access the Cef to initialize it.
+            // web view
+            api(libs.compose.webview.multiplatform)
         }
 
         commonTest.dependencies {
@@ -42,15 +60,24 @@ kotlin {
         jvmMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
-            implementation(libs.sqlDelight.driver.sqlite)
+            // web view
+            api(libs.kcef)
         }
+    }
 
+    @OptIn(ExperimentalKotlinGradlePluginApi::class)
+    compilerOptions {
+        freeCompilerArgs.add("-Xexpect-actual-classes")
+    }
+
+    composeCompiler {
+        enableStrongSkippingMode = true
+        includeSourceInformation = true
     }
 }
 
 dependencies {
-    "commonMainApi"(project(":composeCore:core"))
-    "commonMainApi"(project(":composeCore:libs:keyboardLib"))
+    commonMainApi(project(":composeCore:core"))
 }
 
 compose.desktop {
@@ -61,6 +88,25 @@ compose.desktop {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "$packageName.desktopApp"
             packageVersion = "1.0.0"
+        }
+        buildTypes.release.proguard {
+            isEnabled = false
+            obfuscate.set(true)
+            optimize.set(true)
+            configurationFiles.from("compose-desktop.pro")
+        }
+    }
+}
+
+afterEvaluate {
+    tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
         }
     }
 }
